fixed UI layout issues

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ h1 {
 #tasklist div:hover {
   transform: scale(1.02);
 }
-@media (max-width: 600px) {
+@media (max-width: 768px) {
 
   .form {
     flex-direction: column;
